--- a/SteamPunkWeb/SteamPunkApp/templates/about_page.html
+++ b/SteamPunkWeb/SteamPunkApp/templates/about_page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="globals.css" />
-        <link rel="stylesheet" href="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/css/about_page.css" />
+        <link rel="stylesheet" href="/SteamPunkWeb/SteamPunkApp/static/css/about_page.css" />
         <script>
             function goBack() {
                 // Redirect to transitional page before welcome page
@@ -20,19 +20,23 @@
                         <div class="rectangle"></div>
                     </div>
                     <div class="component">
-                        <img class="about" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/About.png" alt="About" /> 
-                        <img class="img" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/Rectangle 4.png" alt="Rectangle" />
+                        <img class="about" src="/SteamPunkWeb/SteamPunkApp/static/pictures/About.png" alt="About" /> 
+                        
+                        <!-- New image added here -->
+                        <img class="new-image" src="/SteamPunkWeb/SteamPunkApp/static/pictures/paragraph.png" alt="New Image" />
+
+                        <img class="img" src="/SteamPunkWeb/SteamPunkApp/static/pictures/Rectangle 4.png" alt="Rectangle" />
                     </div>
-                    <img class="image" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 1.png" alt="Image 1" />
-                    <img class="image-2" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 2.png" alt="Image 2" />
-                    <img class="image-3" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 3.png" alt="Image 3" />
-                    <img class="image-4" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 4.png" alt="Image 4" />
+                    <img class="image" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 1.png" alt="Image 1" />
+                    <img class="image-2" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 2.png" alt="Image 2" />
+                    <img class="image33" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 33.png" alt="Image33" />
+                    <img class="image-4" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 4.png" alt="Image 4" />
                     <div class="overlap-group-wrapper">
                         <div class="div">
                             <a href="https://www.linkedin.com/in/pranavchintala/overlay/about-this-profile/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3B9Q%2BAx4BhREKr61uB%2BhO2EQ%3D%3D" target="_blank" rel="noopener noreferrer">
                                 <div class="text-wrapper-2">Pranav Chintala</div>
                             </a>
-                            <img class="image-5" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Pranav" />
+                            <img class="image-5" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Pranav" />
                         </div>
                     </div>
                     <div class="overlap-2">
@@ -41,7 +45,7 @@
                                 <a href="https://www.linkedin.com/in/ricardomejiaaraujo/overlay/about-this-profile/" target="_blank" rel="noopener noreferrer">
                                     <div class="text-wrapper-2">Ricardo Mejia</div>
                                 </a>
-                                <img class="image-5" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Ricardo" />
+                                <img class="image-5" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Ricardo" />
                             </div>
                         </div>
                         <div class="component-2">
@@ -49,7 +53,7 @@
                                 <a href="https://www.linkedin.com/in/ibrahim-haroon-525240279/overlay/about-this-profile/" target="_blank" rel="noopener noreferrer">
                                     <div class="text-wrapper-2">Ibrahim Haroon</div>
                                 </a>
-                                <img class="image-5" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Ibrahim" />
+                                <img class="image-5" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Ibrahim" />
                             </div>
                         </div>
                         <div class="component-3">
@@ -57,14 +61,14 @@
                                 <a href="https://www.linkedin.com/in/farhan-sadaat-8227b9291/overlay/about-this-profile/" target="_blank" rel="noopener noreferrer">
                                     <div class="text-wrapper-2">Farhan Sadaat</div>
                                 </a>
-                                <img class="image-5" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Farhan" />
+                                <img class="image-5" src="/SteamPunkWeb/SteamPunkApp/static/pictures/image 5.png" alt="Farhan" />
                             </div>
                         </div>
                     </div>
                     
                     <div class="BACK-wrapper">
                         <a href="javascript:void(0);" onclick="goBack()">
-                            <img class="BACK" src="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/pictures/BACK.png" alt="Back" />
+                            <img class="BACK" src="/SteamPunkWeb/SteamPunkApp/static/pictures/BACK.png" alt="Back" />
                         </a>
                     </div>
                 </div>
