--- a/SteamPunkWeb/SteamPunkApp/templates/Tutorial_page.html
+++ b/SteamPunkWeb/SteamPunkApp/templates/Tutorial_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% load static %}
     <meta charset="utf-8" />
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/css/Tutorial_page.css" />
