--- a/SteamPunkWeb/SteamPunkApp/templates/welcome_page.html
+++ b/SteamPunkWeb/SteamPunkApp/templates/welcome_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/SteamPunkBot/SteamPunkWeb/SteamPunkApp/static/css/welcome_page.css" />
 </head>
